--- a/requisicao-http-rotas/src/pages/home/home.css
+++ b/requisicao-http-rotas/src/pages/home/home.css
@@ -7,7 +7,7 @@
     width: 900px;
     margin: 20px;
     padding: 10px;
-    background-color: #DDD;
+    background-color: #FFF;
     border-radius: 5px;
 }
 .containerHomeFilho article{
@@ -23,6 +23,7 @@
     justify-content: center;
     padding: 10px;
     text-transform: uppercase;
+    color: brown;
 }
 .containerHomeFilho img{
     border-radius: 5px;
@@ -37,6 +38,7 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;   
     margin-top: -20px;
+
     text-decoration: none;
     text-transform: uppercase;
     color: #FFF;
